--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,61 +1,124 @@
 body {
     font-family: "Manrope", sans-serif;
+    letter-spacing: -0.03em;
+    color: #121212;
 }
 
 .container {
     max-width: 1180px;
     margin: 0 auto;
-    padding: 15px;
+    padding: 0 15px;
 }
 
+section:not(:last-of-type) {
+    margin-bottom: 150px;
+}
+
+/* main */
 h1 {
-    max-width: 960px;
+    max-width: 1000px;
     margin-bottom: 30px;
     font-size: 60px;
     line-height: 1;
-    letter-spacing: -0.03em;
-}
-
-.description-wrapper {
-    width: 100%;
-    height: 500px;
-    margin-bottom: 150px;
-    padding-top: 379px;
-    padding-left: 40px;
-    background-image: url('../resources/01.jpg');
-}
-
-.description {
-    margin-bottom: 40px;
-    max-width: 430px;
-    font-size: 20px;
-    letter-spacing: -0.03em;
-    color: #fff;
 }
 
 h2 {
     margin-bottom: 30px;
     font-size: 18px;
-    letter-spacing: -0.03em;
     text-transform: uppercase;
 }
 
+h3 {
+    font-size: 30px;
+}
+
+.description-wrapper {
+    position: relative;
+    max-width: 100%;
+    height: 500px;
+    background-image: url('../resources/01.jpg');
+    background-position: center;
+}
+
+.description {
+    position: absolute;
+    left: 40px;
+    bottom: 40px;
+    max-width: 430px;
+    font-size: 20px;
+    color: #fff;
+}
+
+/* about */
 .about-description {
-    max-width: 1050px;
+    max-width: 1100px;
     margin-bottom: 30px;
     font-size: 45px;
-    line-height: 61px;
-    letter-spacing: -0.03em;
+    line-height: 1.35;
 }
 
 .btn {
     display: inline-block;
     padding: 20px 40px;
     border-radius: 5px;
+    font-size: 20px;
     background-color: #AD1818;
     color: #fff;
 }
 
 .btn:hover {
     opacity: 0.8;
+}
+
+/* projects */
+.projects__item {
+    margin-bottom: 90px;
+}
+
+.projects__image {
+    margin-bottom: 15px;
+}
+
+.projects__title {
+    margin-bottom: 15px;
+}
+
+.projects__link {
+    font-size: 20px;
+    color: #AD1818;
+}
+
+.projects__link:hover {
+    opacity: 0.7;
+}
+
+.projects__btn {
+    display: block;
+    width: 100%;
+    padding: 56px 0;
+    border: 1px solid #AD1818;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 30px;
+    color: #AD1818;
+}
+
+.projects__btn:hover {
+    background-color: #AD1818;
+    color: #fff;
+}
+
+/* services */
+.services {
+    padding: 150px 0;
+    background-color: #121212;
+    color: #fff;
+}
+
+.services__item:not(:last-child) {
+    margin-bottom: 60px;
+}
+
+.services__image {
+    margin-bottom: 15px;
 }
