--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,36 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Manrope", sans-serif;
-    letter-spacing: -0.03em;
     color: #121212;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+a,
+button {
+    letter-spacing: -0.03em;
+}
+
+a {
+    transition:
+        opacity 0.2s ease-in-out,
+        color 0.2s ease-in-out,
+        background-color 0.3s ease-in-out,
+        text-decoration 0.3s ease;
+}
+
+a:focus-visible {
+    outline-offset: 3px;
+    outline-color: #AD1818;
 }
 
 .container {
@@ -10,11 +39,53 @@ body {
     padding: 0 15px;
 }
 
-section:not(:last-of-type) {
-    margin-bottom: 150px;
+section+section {
+    margin-top: 150px;
 }
 
-/* main */
+/* Стили для header */
+.header {
+    padding: 34px 0 70px;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    flex-shrink: 0;
+    outline: unset;
+}
+
+.logo img {
+    vertical-align: sub;
+}
+
+.nav__list {
+    display: flex;
+    gap: 61px;
+}
+
+.nav__link {
+    font-size: 18px;
+    white-space: nowrap;
+    line-height: 1.2;
+    color: inherit;
+    text-transform: uppercase;
+    text-decoration-color: transparent;
+}
+
+.nav__link.nav__link-active,
+.nav__link:hover {
+    opacity: 0.5;
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    text-decoration-color: currentColor;
+}
+
+/* hero */
 h1 {
     max-width: 1000px;
     margin-bottom: 30px;
@@ -23,7 +94,7 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 30px;
+    margin-bottom: 31px;
     font-size: 18px;
     text-transform: uppercase;
 }
@@ -51,15 +122,16 @@ h3 {
 
 /* about */
 .about-description {
-    max-width: 1100px;
-    margin-bottom: 30px;
+    max-width: 1080px;
+    margin-top: 32px;
+    margin-bottom: 31px;
     font-size: 45px;
     line-height: 1.35;
 }
 
 .btn {
     display: inline-block;
-    padding: 20px 40px;
+    padding: 20px 41px;
     border-radius: 5px;
     font-size: 20px;
     background-color: #AD1818;
@@ -95,7 +167,7 @@ h3 {
 .projects__btn {
     display: block;
     width: 100%;
-    padding: 56px 0;
+    padding: 55px 0;
     border: 1px solid #AD1818;
     border-radius: 5px;
     text-align: center;
@@ -110,9 +182,14 @@ h3 {
 
 /* services */
 .services {
-    padding: 150px 0;
+    padding-top: 151px;
+    padding-bottom: 150px;
     background-color: #121212;
     color: #fff;
+}
+
+.services__title {
+    margin-bottom: 35px;
 }
 
 .services__item:not(:last-child) {
@@ -121,4 +198,93 @@ h3 {
 
 .services__image {
     margin-bottom: 15px;
+}
+
+/* lanscape */
+.landscape {
+    position: relative;
+    height: 717px;
+    margin-top: 0;
+    background-image: url(./../resources/02.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+}
+
+.landscape__title {
+    position: absolute;
+    bottom: 60px;
+    max-width: 445px;
+    color: #fff;
+}
+
+/* contacts */
+.contacts {
+    margin-top: 186px;
+    margin-bottom: 160px;
+}
+
+.contacts__title {
+    margin-bottom: 33px;
+}
+
+.contacts__wrapper {
+    position: relative;
+}
+
+.contacts__wrapper::before {
+    content: '';
+    position: absolute;
+    top: -35px;
+    display: block;
+    width: 13px;
+    height: 22px;
+    background-image: url(./../resources/icon.svg);
+    background-size: cover;
+}
+
+.contacts__link {
+    display: inline-block;
+    font-size: 60px;
+    line-height: 1;
+    color: inherit;
+    text-decoration-color: transparent;
+}
+
+.contacts__link:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+.contacts__link.contacts__link-active,
+.contacts__link:hover {
+    opacity: 0.5;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 15px;
+    text-decoration-color: currentColor;
+}
+
+/* footer */
+.footer {
+    padding-top: 62px;
+    padding-bottom: 30px;
+    background-color: #121212;
+    color: #fff;
+}
+
+.footer__nav {
+    max-width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 88px;
+}
+
+.footer__nav-link.nav__link-active,
+.footer__nav-link:hover {
+    text-decoration: unset;
+}
+
+.footer__copyright {
+    text-align: center;
+    font-size: 20px;
+    opacity: 0.5;
 }
