--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@
 @import url('./about.css');
 @import url('./projects.css');
 @import url('./services.css');
+@import url('./feedback.css');
 @import url('./gallery.css');
 @import url('./contacts.css');
 @import url('./footer.css');
