--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,8 +52,13 @@
     }
 
     .gallery__title {
+        top: 80px;
         left: 50px;
-        max-width: 380px;
+        font-size: 20px;
+    }
+
+    .gallery__desription {
+        max-width: 50%;
         font-size: 25px;
     }
 
@@ -92,8 +97,21 @@
         width: 100%;
     }
 
+    .gallery__controls {
+        bottom: 50%;
+        width: 95%;
+    }
+
     .contacts {
         margin: 120px 0 80px;
+    }
+
+    .contacts__wrapper {
+        gap: 10px;
+    }
+
+    .contacts__link {
+        font-size: 35px;
     }
 }
 
@@ -210,17 +228,26 @@
     }
 
     .gallery__title {
-        left: 15px;
-        max-width: 290px;
+        top: 61px;
+        left: 12px;
+        font-size: 14px;
+    }
+
+    .gallery__desription {
+        max-width: 90%;
         font-size: 19px;
     }
 
     .contacts {
         margin: 80px 0;
     }
+    .contacts__wrapper {
+        flex-wrap: wrap;
+        gap: 20px;
+    }
 
     .contacts__link {
-        font-size: 35px;
+        width: 100%;
     }
 
     .footer {
