--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -2,16 +2,77 @@
 .gallery {
     position: relative;
     height: 717px;
-    background-image: url('../resources/02.jpg');
+    color: var(--color-white);
+}
+
+.gallery__container {
+    position: relative;
+    height: 100%;
+}
+
+.gallery__title {
+    position: absolute;
+    top: 67px;
+    z-index: 10;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.gallery__controls {
+    position: absolute;
+    z-index: 10;
+    bottom: 30%;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery__controls button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+}
+
+.gallery__controls button:hover {
+    opacity: 0.5;
+}
+
+.gallery__slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-.gallery__title {
+.gallery__slide-1 {
+    background-image: url(./../resources/gallery-01.jpg);
+}
+
+.gallery__slide-2 {
+    background-image: url(./../resources/gallery-02.jpg);
+}
+
+.gallery__slide-3 {
+    background-image: url(./../resources/gallery-03.jpg);
+}
+
+.gallery__slide-4 {
+    background-image: url(./../resources/gallery-04.jpg);
+}
+
+.gallery__slide_active {
+    opacity: 1;
+}
+
+.gallery__desription {
     position: absolute;
     bottom: 60px;
-    max-width: 445px;
-    color: var(--color-white);
+    max-width: 35%;
     font-size: 30px;
 }
