--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -73,6 +73,10 @@
         display: none;
     }
 
+    .burger {
+        display: flex;
+    }
+
     .section {
         margin-top: var(--section-gap-tablet);
     }
@@ -137,6 +141,10 @@
 
     .nav__link {
         font-size: 12px;
+    }
+
+    .mobile-nav__link {
+        font-size: 25px;
     }
 
     .hero__title {
@@ -241,6 +249,7 @@
     .contacts {
         margin: 80px 0;
     }
+
     .contacts__wrapper {
         flex-wrap: wrap;
         gap: 20px;
@@ -260,5 +269,33 @@
 
     .footer__copyright {
         font-size: 13px;
+    }
+
+    .popup__body {
+        padding: 80px 16px;
+    }
+
+    .popup__close {
+        top: 40px;
+        right: 30px;
+        width: 30px;
+        font-size: 30px;
+    }
+
+    .popup__title {
+        margin-bottom: 11px;
+        font-size: 25px;
+    }
+
+    .popup__text {
+        font-size: 14px;
+    }
+
+    .order-form {
+        gap: 40px;
+    }
+
+    .form-input {
+        font-size: 18px;
     }
 }
