--- a/styles/services.css
+++ b/styles/services.css
@@ -32,6 +32,7 @@
 
 /* Карточка услуги */
 .service-card__image {
+    width: 100%;
     margin-bottom: 25px;
     max-height: 388px;
     object-fit: cover;
