--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,8 @@
 @import url('./gallery.css');
 @import url('./contacts.css');
 @import url('./footer.css');
+@import url('./popup.css');
+@import url('./burger.css');
 
 @import url('./responsive.css');
 
